# byteplus-agentkit-samples

./: .gitignore
langchain_agent_deploy_sample/: .env.example  README.md  agent.py  client.py  langchain_agent.py  pyproject.toml
migrate-from-adk/: README.md  test_loop.py
multi_agents/: .env.example  README.md  agent.py  client.py  config.yaml.example  main.py  prompts.py  pyproject.toml  requirements.txt
multi_agents/sub_agents/: loop_agent.py  parallel_agent.py  sequential_agent.py
sandbox_tool_sample/: .env.example  README.md  agent.py  client.py  pyproject.toml  requirements.txt
use-cases/: config.yaml.example
use-cases/rag_with_vikingdb/: .env.example  README.md  agent.py  client.py  config.yaml.example  prompts.py  pyproject.toml  requirements.txt  setup_kb.py
use-cases/rag_with_vikingdb/data/: outlet_locations.txt  product_info.txt  product_info_1.txt  repair_guide.txt  service_policy.txt  troubleshooting_guide.txt  warranty_terms.txt
use-cases/tiktok_ref_video_gen/: .env.example  README.md  agent.py  client.py  prompts.py  pyproject.toml
use-cases/tiktok_ref_video_gen/tools/: __init__.py  analyze_product.py  analyze_reference.py  download_tiktok.py  file_download.py  image_generate.py  upload_to_tos.py  video_generate.py
use-cases/tiktok_ref_video_gen/utils/: __init__.py  seed_client.py
use-cases/video_gen/: README.md  README_en.md  agent.py  agent.yaml  config.yaml.example  consts.py  pyproject.toml  requirements.txt
use-cases/video_gen/scripts/: setup.sh
use-cases/video_gen/tool/: tos_upload.py
video_generate_debug/: .env.example  README.md  pyproject.toml  reproduce_bug.py
(+26 files in other folders)
