[project]
name = "vikingdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk==1.18.0",
    "veadk-python[extensions]==0.2.29",
    "veadk-python==0.2.29",
    "agentkit-sdk-python>=0.5.1",
    "python-dotenv>=1.0.0",
    "tos>=2.8.7",
]
