[project]
name = "video-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkit-sdk-python>=0.5.1",
    "google-adk>=1.18.0,<1.20.0",
    "tos>=2.8.7",
    "veadk-python==0.5.20",
    "volcengine-python-sdk>=4.0.31",
]
